--- a/_config.yml
+++ b/_config.yml
@@ -80,15 +80,12 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Sidebar Name"
+  name             : "Yongqin Lei"
   avatar           : "profile.png"
-  bio              : "Your biography for the left-hand sidebar"
-  location         : "Location"
-  employer         :
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  googlescholar    : "http://yourfullgooglescholarurl.com"
-  email            :
-  researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
+  bio              : "PhD student at Ivey Business School, Western University"
+  location         : "London, Ontario, Canada"
+  googlescholar    : "https://scholar.google.ca/citations?user=3zN2QaQAAAAJ&hl=en"
+  email            : "ylei.phd@ivey.ca"
   uri              :
   bitbucket        :
   codepen          :
