--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Your Name / Site Title"
+title                    : "Yongqin Lei"
 title_separator          : "-"
 name                     : &name "Your Name"
 description              : &description "personal description"
@@ -91,22 +91,17 @@ author:
   codepen          :
   dribbble         :
   flickr           :
-  facebook         :
+  
   foursquare       :
-  github           : "academicpages"
+  
   google_plus      :
   keybase          :
-  instagram        :
+  
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         :
-  orcid            : "http://orcid.org/yourorcidurl"
-  pinterest        :
+  
   soundcloud       :
-  stackoverflow    : # http://stackoverflow.com/users/123456/username
-  steam            :
-  tumblr           :
-  twitter          : "replacethistwitterhandle"
+  
   vine             :
   weibo            :
   xing             :
