--- a/_config.yml
+++ b/_config.yml
@@ -72,7 +72,7 @@ analytics:
 # Site Author
 author:
   name             : "Yongqin Lei"
-  avatar           : "profile1.png"
+  avatar           : "profile.png"
   bio              : "PhD student at Ivey Business School, Western University"
   location         : "London, Ontario, Canada"
   googlescholar    : "https://scholar.google.ca/citations?user=3zN2QaQAAAAJ&hl=en"
