--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,11 @@
 # main links links
 main:
+  - title: "Research"
+    url: /research/
+    
+  - title: "Awards"
+    url: /awards/
+  
   
   - title: "CV"
     url: /cv/
