--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,7 +3,7 @@ main:
   - title: "Research"
     url: /research/
     
-  - title: "Awards"
+  - title: "Honors and Awards"
     url: /awards/
   
   
