--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # Site Settings
 
 locale                   : "en-US"
-title                    : "Home"
+title                    : "Yongqin Lei"
 title_separator          : "-"
 name                     : &name "Your Name"
 description              : &description "personal description"
