--- a/_config.yml
+++ b/_config.yml
@@ -76,6 +76,7 @@ author:
   avatar           : "profile.png"
   bio              : "PhD student at Ivey Business School, Western University"
   location         : "London, Ontario, Canada"
+  official page    : "https://www.ivey.uwo.ca/phd/students/yongqin-lei/" 
   googlescholar    : "https://scholar.google.ca/citations?user=3zN2QaQAAAAJ&hl=en"
   email            : "ylei.phd@ivey.ca"
   uri              :
