--- a/_config.yml
+++ b/_config.yml
@@ -136,6 +136,8 @@ keep_files:
 encoding: "utf-8"
 markdown_ext: "markdown,mkdown,mkdn,mkd,md"
 
+markdown: kramdown
+
 
 # Conversion
 markdown: kramdown
