--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,7 @@ analytics:
 # Site Author
 author:
   name             : "Yongqin Lei"
-  avatar           : "selfie.png"
+  avatar           : "professional selfie.png"
   bio              : "PhD student at Ivey Business School, Western University"
   location         : "London, Ontario, Canada"
   googlescholar    : "https://scholar.google.ca/citations?user=3zN2QaQAAAAJ&hl=en"
