--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,6 +5,12 @@ main:
     
   - title: "Honors and Awards"
     url: /awards/
+    
+  - title: "Presentations"
+    url: /Presentations/
+   
+  - title: "Professional Service"
+    url: /Professional Service/
   
   
 
