--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@ main:
     url: /awards/
     
   - title: "Presentations"
-    url: /Presentations/
+    url: /presentations/
    
   - title: "Professional Service"
     url: /Professional Service/
