--- a/_config.yml
+++ b/_config.yml
@@ -74,7 +74,7 @@ analytics:
 author:
   name             : "Yongqin Lei"
   avatar           : "professional selfie.png"
-  bio              : "PhD student at Ivey Business School, Western University"
+  bio              : "PhD Candidate at Ivey Business School, Western University"
   location         : "London, Ontario, Canada"
   googlescholar    : "https://scholar.google.ca/citations?user=3zN2QaQAAAAJ&hl=en"
   email            : "ylei.phd@ivey.ca"
