--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,15 +2,22 @@
 main:
   - title: "Research"
     url: /research/
-    
+
+  - title: "Teaching"
+    url: /teaching/
+
+
+  - title: "Presentations"
+    url: /presentations/
+
+  
   - title: "Honors and Awards"
     url: /awards/
     
     
-  - title: "Presentations"
-    url: /presentations/
+
    
-  - title: "Professional Service"
+  - title: "Academic Community Service"
     url: /Professional Service/
   
   
