--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,7 +18,7 @@ main:
 
    
   - title: "Academic Community Service"
-    url: /Professional Service/
+    url: /Academic Community Service/
   
   
   
