--- a/_config.yml
+++ b/_config.yml
@@ -67,7 +67,7 @@ yandex_site_verification :
 analytics:
   provider               :  "google-universal" # false (default), "google", "google-universal", "custom"
   google:
-    tracking_id          : "UA-156557226-1"
+    tracking_id          : "G-57QLR2RTT2"
 
 
 # Site Author
