--- a/_config.yml
+++ b/_config.yml
@@ -65,7 +65,7 @@ yandex_site_verification :
 
 # Analytics
 analytics:
-  provider               :  "google-universal" # false (default), "google", "google-universal", "custom"
+  provider               :  "google" # false (default), "google", "google-universal", "custom"
   google:
     tracking_id          : "G-57QLR2RTT2"
 
