--- a/_config.yml
+++ b/_config.yml
@@ -74,8 +74,8 @@ analytics:
 author:
   name             : "Yongqin Lei"
   avatar           : "professional selfie.png"
-  bio              : "PhD Candidate at Ivey Business School, University of Western Ontario"
-  location         : "London, Ontario, Canada"
+  bio              : "Incoming Assistant Professor, University of Winnipeg"
+  location         : "Winnipeg, Manitoba, Canada"
   googlescholar    : "https://scholar.google.ca/citations?user=3zN2QaQAAAAJ&hl=en"
   email            : "ylei.phd@ivey.ca"
   uri              :
