--- a/_config.yml
+++ b/_config.yml
@@ -74,7 +74,7 @@ analytics:
 author:
   name             : "Yongqin Lei"
   avatar           : "professional selfie.png"
-  bio              : "Incoming Assistant Professor, University of Winnipeg"
+  bio              : "Assistant Professor, University of Winnipeg"
   location         : "Winnipeg, Manitoba, Canada"
   googlescholar    : "https://scholar.google.ca/citations?user=3zN2QaQAAAAJ&hl=en"
   email            : "ylei.phd@ivey.ca"
